Wed Apr 06 10:27:41 GMT 2011  Richard Boulton <richard@tartarus.org>

	* docs/admin_notes.rst: Remove the word "also", which makes sense
	  when read in context of the previous section, but is confusing if
	  the paragraph is read standalone, and isn't necessary.

Mon Apr 04 14:41:33 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS: Final update for 1.2.5.

Mon Apr 04 14:06:56 GMT 2011  Olly Betts <olly@survex.com>

	* backends/brass/brass_version.cc: Remove ? from comment - the brass
	  version change is definitely going to be in 1.2.5.

Mon Apr 04 13:57:23 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS: Bump release date.

Sat Mar 26 14:49:41 GMT 2011  Olly Betts <olly@survex.com>

	* INSTALL: Fix typo in previous commit.

Sat Mar 26 14:03:15 GMT 2011  Olly Betts <olly@survex.com>

	* INSTALL: Note how to build for a non-default arch on a multi-arch
	  platform.

Sat Mar 26 13:22:49 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.5.

Sat Mar 26 12:28:38 GMT 2011  Olly Betts <olly@survex.com>

	* AUTHORS: Update.

Sat Mar 26 10:33:19 GMT 2011  Olly Betts <olly@survex.com>

	* backends/brass/brass_postlist.cc,backends/brass/brass_postlist.h,
	  backends/chert/chert_postlist.cc,backends/chert/chert_postlist.h,
	  backends/inmemory/inmemory_database.h: Address issues highlighted
	  by clang++ warnings.

Fri Mar 25 05:36:41 GMT 2011  Olly Betts <olly@survex.com>

	* docs/tests.html: Slight tweak to improve up-to-date-ness, but more
	  work would be useful.

Fri Mar 25 05:30:56 GMT 2011  Olly Betts <olly@survex.com>

	* docs/matcherdesign.html: Update - quite a bit has changed in the
	  matcher since this was last updated!

Thu Mar 24 23:31:57 GMT 2011  Olly Betts <olly@survex.com>

	* api/replication.cc,common/replication.h: Pass reader_close_time as
	  double everywhere, rather than truncating it to int.  Include
	  reader_close_time parameters in debug logging.  Document
	  reader_close_time in doxygen comments.
